--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.2.6",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -25,7 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-bootstrap": "^1.6.3",
-    "primeng": "^1.1.4",
+    "primeng": "^4.1.0-rc.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
