--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.10.1",
+    "intl": "^1.2.5",
     "ng2-bootstrap": "^1.6.3",
+    "npm": "^5.3.0",
     "primeng": "^4.1.0-rc.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
